src/test/ui/closures/2229_closure_analysis/wild_patterns.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/wild_patterns.rs:20:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/wild_patterns.rs:35:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/wild_patterns.rs:50:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/wild_patterns.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: Capturing p[(0, 0)] -> ImmBorrow
  --> $DIR/wild_patterns.rs:24:37
   |
LL |         let Point { x: _x, y: _ } = p;
   |                                     ^

error: Min Capture p[(0, 0)] -> ImmBorrow
  --> $DIR/wild_patterns.rs:24:37
   |
LL |         let Point { x: _x, y: _ } = p;
   |                                     ^

error: Capturing t[(0, 0)] -> ByValue
  --> $DIR/wild_patterns.rs:39:23
   |
LL |         let (_x, _) = t;
   |                       ^

error: Min Capture t[(0, 0)] -> ByValue
  --> $DIR/wild_patterns.rs:39:23
   |
LL |         let (_x, _) = t;
   |                       ^

error: Capturing arr[Index] -> ByValue
  --> $DIR/wild_patterns.rs:54:23
   |
LL |         let [_x, _] = arr;
   |                       ^^^

error: Min Capture arr[] -> ByValue
  --> $DIR/wild_patterns.rs:54:23
   |
LL |         let [_x, _] = arr;
   |                       ^^^

error: aborting due to 9 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
